2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* tests.lisp (run-all-tests-parallel): allow "approximately"
	:concurrency threads to run simultaneously (default 5) and initialize
	the C stack size to 16 MB

2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* tests.lisp (run-all-tests-parallel): use keyword argument for mutex
	name and WITH-LOCK for locking.

2008-11-20  Sam Steingold  <sds@gnu.org>

	* tests.lisp (*all-tests*, test-weakptr): extracted from run-all-tests
	(run-all-tests): use them
	(run-all-tests-parallel) [(and CLISP MT)]: add
	* Makefile (parallel): new target (calls run-all-tests-parallel)

2008-11-06  Sam Steingold  <sds@gnu.org>

	* macro8.tst: check unused function warnings

2008-10-28  Sam Steingold  <sds@gnu.org>

	* path.tst: add 2 tests for bug #[ 2198109 ]:
	LOAD-LOGICAL-PATHNAME-TRANSLATIONS confuses "many" and "one"
	when *LOAD-PATHS* is wild

2008-10-16  Sam Steingold  <sds@gnu.org>

	* symbol10.tst: check keyword reading

2008-09-17  Sam Steingold  <sds@gnu.org>

	* tests.lisp (cmd-args): new function
	* ext-clisp.tst (ext:run-program): use it;
	avoid the potential of a dotted result list which breaks PRETTY-COMPARE
	* modules/syscalls/test.tst: use CMD-ARGS and starting *PROC1* & *PROC2*

2008-09-11  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst: test ARGV, RUN-PROGRAM, and EXIT

2008-08-12  Sam Steingold  <sds@gnu.org>

	* alltest.tst: add tests for LISP-IMPLEMENTATION-TYPE,
	LISP-IMPLEMENTATION-VERSION, MACHINE-INSTANCE, MACHINE-TYPE,
	MACHINE-VERSION

2008-08-11  Sam Steingold  <sds@gnu.org>

	* ffi.tst: fix the gethostname=machine-instance case for systems
	where gethostbyname(gethostname) /= gethostname (NetBSD 4.99.72 i386)
	Reported by Aleksej Saushev <asau@inbox.ru>

2008-08-10  Sam Steingold  <sds@gnu.org>

	* path.tst (test-weird-pathnames): work around systems which only
	accept ASCII pathnames (e.g., OSX PPC 10.4.11 (Darwin 8.11.0))

2008-08-09  Sam Steingold  <sds@gnu.org>
