@@ -1,3 +1,7 @@
+2008-11-22  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* tests.lisp (run-all-tests-parallel): do not share args between threads
+
 2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>
 
 	* tests.lisp (run-all-tests-parallel): allow "approximately"
